[metadata]
name = gdbplugins
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Make debugging of programs written in various languages easy.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
;home-page = https://launchpad.net/pbr
;project_urls =
;    Bug Tracker = https://bugs.launchpad.net/pbr/
;    Documentation = https://docs.openstack.org/pbr/
;    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = GNU GPL3
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Manufacturing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    brewery

[entry_points]
console_scripts =
    _gdbplugin_loader = gdbplugin.loader:load_plugins

gdb.plugins =
    python = gdbplugin.python:main
    ruby = gdbplugin.ruby:main
