[metadata]
name = gdbplugins
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Make debugging of programs written in various languages easy.
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/jaryn/gdbplugins
;project_urls =
;    Bug Tracker = https://bugs.launchpad.net/pbr/
;    Documentation = https://docs.openstack.org/pbr/
;    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = GNU GPL3
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Ruby
    Topic :: Software Development :: Debuggers
keywords =
    gdb plugin

[files]
packages =
    gdbplugin
data_files =
    etc/gdbinit.d = gdbplugin_loader.py

[entry_points]
gdb.plugins =
    python = gdbplugin.python:main
    ruby = gdbplugin.ruby:main
